# lexa-env

./: Cargo.toml
src/: declaration.rs  error.rs  from_file.rs  from_str.rs  interface.rs  lib.rs
tests/: .env  from_file.rs  from_str.rs
