[package]
name = "lexa-env"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/PhiSyX/lexa-env"
description = "Récupère tes variables d'environnement simplement."

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde-env = { version = "^0.1" }
thiserror = { version = "^1.0" }
